# SdlGlNextStep

./: CMakeLists.txt
headers/: Errors.h  File.h  Log.h  OpenGL.h  Random.h  Shaders.h  Std.h
shaders/: shader.frag  shader.vert
src/: File.c  Log.c  OpenGL.c  Random.c  Shaders.c  Std.c  main.c
